# uNVCPfl

./: README.md  package-lock.json  package.json  vite.config.ts
scripts/: unvcpfl
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: game_settings.rs  games.rs  lib.rs  main.rs  nvidia.rs  profiles.rs  screen.rs
src/components/layout/: GpuMonitor.tsx  MainPanel.tsx  ProfileManagerPanel.tsx  ScreenSettingsPanel.tsx  Sidebar.tsx
src/components/ui/: button.tsx  scroll-area.tsx  select.tsx  switch.tsx
src/lib/: api.ts
