[package]
name = "unvcpfl"
version = "0.1.0"
description = "unofficial NVIDIA Control Panel for Linux"
authors = ["you"]
edition = "2021"
default-run = "unvcpfl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "unvcpfl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
nvml-wrapper = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"
walkdir = "2"
regex = "1"
thiserror = "2"
hostname = "0.4"
